# market-forge

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  NOTICE.md  README.md  package.json
.ai/: context.md  memory.example.md  pipeline.md
.ai/agents/: README.md
.ai/commands/: acceptance.md  bootstrap.md  consensus-review.md  excalidraw-spec.md
.ai/skills/evolve/: SKILL.md
.ai/specs/: 00-requirements.md  01-spec.md  02-plan.md  03-review.md  98-nice-to-haves.md  99-acceptance.md
.ai/templates/: banner.md  cursor.header.mdc
.ai/workflows/: README.md  consensus-review.workflow.js  evolve-scan.workflow.js  parallel-slices.workflow.js
.claude/commands/: bootstrap.md
.claude/skills/evolve/: SKILL.md
.claude/skills/project-bootstrap/: SKILL.md
.codex/: config.toml
.gemini/agents/: performance-reviewer.md
.gemini/commands/: acceptance.toml  bootstrap.toml  build.toml  code-simplify.toml  consensus-review.toml  evolve.toml  excalidraw-spec.toml  plan.toml  review.toml  ship.toml  spec.toml  test.toml
.githooks/: pre-commit
.opencode/commands/: evolve.md
crates/market-forge/: Cargo.toml
crates/market-forge/src/: main.rs  wizard.rs
crates/mf-book/: Cargo.toml
crates/mf-book/src/: bitmap.rs  btree.rs  lib.rs
crates/mf-codegen/: Cargo.toml
crates/mf-codegen/src/: error.rs  lib.rs  matrix.rs  render.rs  spec.rs
crates/mf-codegen/tests/: all_combos.rs
crates/mf-concurrency/: Cargo.toml
crates/mf-concurrency/src/: disruptor.rs  lib.rs
crates/mf-core/: Cargo.toml
crates/mf-core/src/: book.rs  engine.rs  lib.rs  types.rs
crates/mf-matching/: Cargo.toml
crates/mf-matching/src/: fifo.rs  lib.rs  prorata.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: catalog.rs  gitcmd.rs  main.rs  sync.rs  transforms.rs
docs/: architecture.md  standards.md
docs/catalog/: README.md
docs/catalog/books/: adaptive-radix-tree.md  array-price-ladder.md  bitmap.md  btreemap.md  hash-linked-list.md  order-id-location-index.md  skip-list.md  slab-allocator.md  van-emde-boas.md
docs/catalog/concurrency/: cache-line-padding.md  lmax-disruptor.md  mpsc-backpressure.md  numa-aware-sharding.md  rcu.md  seqlock.md  sharding-by-symbol.md  single-writer-principle.md  spsc-ring-buffer.md  waitfree-lockfree-queues.md
docs/catalog/infra/: aeron-chronicle.md  branch-prediction-hints.md  cpu-pinning.md  deterministic-replay.md  event-sourcing-cqrs.md  fix-itch-ouch-sbe.md  fixed-point-decimals.md  huge-pages-mlock.md  kernel-bypass-networking.md  simd.md  write-ahead-log.md  zero-copy-serialization.md
docs/catalog/liquidation/: auto-deleveraging-adl.md  backstop-liquidity-provider.md  bankruptcy-price-insurance-trigger.md  cascade-prevention.md  insurance-fund-management.md  liquidation-engine.md  partial-liquidation.md  socialized-loss.md
docs/catalog/matching/: dutch-auction.md  iceberg-reserve.md  pegged-midpoint.md  price-size-time.md  price-time-fifo.md  pro-rata-top.md  pro-rata.md  self-trade-prevention.md  threshold-pro-rata.md  uniform-price-auction.md
docs/catalog/perps/: funding-rate.md  impact-bid-ask.md  index-price-aggregation.md  maker-taker-fee-tiers.md  mark-price.md  position-netting-hedge-mode.md
docs/catalog/prediction/: bayesian-market-maker.md  cfmm-binary-outcomes.md  combinatorial-prediction-markets.md  conditional-tokens-framework.md  dynamic-pari-mutuel.md  liquidity-bootstrapping.md  lmsr.md  ls-lmsr.md  oracle-resolution.md  polymarket-clob.md
docs/catalog/risk/: binomial-trinomial-trees.md  black-scholes.md  expected-shortfall-cvar.md  greeks.md  isolated-margin.md  mark-to-market-vs-index.md  portfolio-cross-margin.md  realtime-pnl-incremental.md  span-2-expected-shortfall.md  span.md  stress-testing.md  tiered-margin.md  value-at-risk.md
scripts/: lint-catalog.sh  sync-ai-docs.ts
templates/venue/: Cargo.toml.tera  README.md.tera
templates/venue/engine/: Cargo.toml.tera  bench.rs.tera  golden_test.rs.tera  lib.rs.tera
templates/venue/tui/: Cargo.toml.tera  main.rs.tera
templates/venue/web/: Cargo.toml.tera  index.html.tera  main.rs.tera
