[package]
name = "mf-core"
description = "Market Forge core domain types and matching-engine traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rust_decimal.workspace = true
serde.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
