[package]
name = "mf-matching"
description = "Market Forge matching algorithms (FIFO price-time, pro-rata)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mf-core.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
mf-book.workspace = true
rust_decimal_macros.workspace = true
