[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ogarciarevett/market-forge"
authors = ["Omar Garcia <ogarciarevett@gmail.com>"]
publish = false
description = "Dev-only Rust task runner: agent-doc sync + catalog lint for market-forge."

[[bin]]
name = "xtask"
path = "src/main.rs"
